mod is working, still a couple of capability-related bugs