@@ -1,7 +1,6 @@
 package net.qiyanamark.companionpouch.helper;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -10,11 +9,13 @@ import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.ItemStack;
 
+import org.checkerframework.checker.nullness.qual.NonNull;
+import top.theillusivec4.curios.api.CuriosApi;
+import top.theillusivec4.curios.api.SlotResult;
+
 import iskallia.vault.core.vault.Vault;
 import iskallia.vault.init.ModItems;
 import iskallia.vault.item.CompanionItem;
-
-import top.theillusivec4.curios.api.CuriosApi;
 
 import net.qiyanamark.companionpouch.catalog.CatalogItem;
 import net.qiyanamark.companionpouch.item.ItemPouchCompanion;
@@ -32,7 +33,7 @@ public class HelperCompanions {
                 if (stack.getItem() instanceof ItemPouchCompanion) {
                     return ItemPouchCompanion.getContents(stack);
                 } else {
-                    return new ArrayList<>(Arrays.asList(stack));
+                    return new ArrayList<>(List.of(stack));
                 }
             })
             .orElseGet(Collections::emptyList);
@@ -45,7 +46,7 @@ public class HelperCompanions {
 
         return CuriosApi.getCuriosHelper()
             .findFirstCurio(entity, stack -> stack.getItem() == CatalogItem.COMPANION_POUCH.get())
-            .map(result -> result.stack())
+            .map(SlotResult::stack)
             .or(() -> {
                 if (!(entity instanceof ServerPlayer sPlayer)) {
                     return Optional.empty();
@@ -65,11 +66,11 @@ public class HelperCompanions {
             });
     }
 
-    public static boolean companionCanUseTemporalInVault(ItemStack companionStack, Vault vault) {
-        if (companionStack == null || vault == null) {
+    public static boolean companionCanUseTemporalInVault(ItemStack companionStack, @NonNull Optional<Vault> vault) {
+        if (companionStack == null || vault.isEmpty()) {
             return false;
         }
 
-        return !CompanionItem.hasUsedTemporalIn(companionStack, vault.get(Vault.ID)) && CompanionItem.getCurrentCooldown(companionStack) == 0;
+        return !CompanionItem.hasUsedTemporalIn(companionStack, vault.get().get(Vault.ID)) && CompanionItem.getCurrentCooldown(companionStack) == 0;
     }
 }
